# pyproject-base

./: .coveragerc  Makefile  README.md  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-dev.in  requirements-tests.txt  ruff.toml
python/pyproject_base/: __init__.py  __main__.py
requirements/: dev.txt  requirements-dev.in  requirements-dev.txt  requirements-tests.in  requirements-tests.txt  requirements.txt
src/: __init__.py  __main__.py
