[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyproject_base"
description = "project description"
version = "0.1.0"

authors = [
    {name = "the-citto", email = "my.email@domain.com"}
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: MIT",
    "Operating System :: Linux"
]

dynamic = ["dependencies", "optional-dependencies"]

[project.scripts]
pyproject_base = "pyproject_base:__main__.main"

[project.gui-scripts]
# pyproject_basew = "pyproject_base:__main__.main"


[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.package-data]
programming_bitcoin = ["py.typed"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements/requirements.txt"] }
optional-dependencies.tests = { file = ["requirements/requirements-tests.txt"]}
optional-dependencies.dev = { file = ["requirements/requirements-dev.txt"]}

[tool.setuptools.packages.find]
where = ["python"]


[tool.pytest.ini_options]
addopts = "--strict-markers --no-header --tb=no --cov --cov-report term-missing"
testpaths = ["tests"]


[tool.coverage.run]
omit = ["tests/*"]


[tool.mypy]
strict = true
python_executable = ".venv/bin/python"
exclude = [
    "__pycache__",
    ".git",
    ".venv",
    "_old",
    "_tmp",
]

# [[tool.mypy.overrides]]
# module = "tests.*"
# ignore_errors = true


[tool.pyright]
venvPath = "."
venv = ".venv"

# typeCheckingMode = "off"
enableReachabilityAnalysis = false

include = [
    "python",
    "tests",
]
exclude = [
    "__pycache__",
    ".git",
    ".venv",
    "_old",
    "_tmp",
]


[tool.ruff]
exclude = [
    "__pycache__",
    ".git",
    ".venv",
    "_old",
    "_tmp",
]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    "ALL"
]
ignore = [
    # "D211", # `no-blank-line-before-class`
    "D203", # `one-blank-line-before-class`
    "D212", # `multi-line-summary-first-line`
    # "D213", # `multi-line-summary-second-line
    "ERA001", # Found commented-out code
    # "PLR2044", # Line with empty comment
    # "TD003", # Missing issue link on the line following this TODO
]

[tool.ruff.per-file-ignores]
"tests/**/*.py" = [
    "ANN401", # Dynamically typed expressions (typing.Any) are disallowed
    "D102", # Missing docstring in public method
    "D102", # Missing docstring in public method
    "D103", # Missing docstring in public function
    "PLR2004", # Magic value used in comparison
    "S101",  # Use of `assert` detected
]

[tool.ruff.isort]
known-first-party = ["pyproject_base"]
lines-after-imports = 3


