[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyproject_base"
description = "project description"
version = "0.1.0"
requires-python = ">=3.12"

authors = [
    {name = "the-citto", email = "my.email@domain.com"}
]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: MIT",
    "Operating System :: Linux"
]

dynamic = ["dependencies"]

[project.scripts]
pyproject_base = "pyproject_base:__main__.main"

[project.gui-scripts]

[project.optional-dependencies]
tests = [
    "complexipy",
    "coverage",
    "pytest",
    "pytest-black",
    "pytest-cov",
    "pytest-flake8",
    "pytest-isort",
    "pytest-mypy",
    "pytest-pyright",
    "pytest-ruff",
]
dev = [
    "pyproject_base[tests]",
    "ipython",
]

[tool.setuptools.package-data]
pyproject_base = ["py.typed"]

[tool.setuptools.dynamic]
sependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
where = ["src"]

